--- a/gmall-user-manage/src/main/resources/application.properties
+++ b/gmall-user-manage/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 
+spring.datasource.url=jdbc:mysql://db.gmall.com:3306/gmall?characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=123456
+
+spring.dubbo.application.name=user-manage
+spring.dubbo.registry.protocol=zookeeper
+spring.dubbo.registry.address=zk.gmall.com:2181
+spring.dubbo.base-package=com.atguigu.gmall
+spring.dubbo.protocol.name=dubbo
+
