--- a/gmall-manage-service/src/main/resources/application.properties
+++ b/gmall-manage-service/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+server.port=8091
+
+logging.level.root=debug
 
 spring.datasource.url=jdbc:mysql://db.gmall.com:3306/gmall?characterEncoding=UTF-8
 spring.datasource.username=root
