--- a/gmall-manage-service/src/main/resources/application.properties
+++ b/gmall-manage-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8091
 
-logging.level.root=debug
+#logging.level.root=debug
 
 spring.datasource.url=jdbc:mysql://db.gmall.com:3306/gmall?characterEncoding=UTF-8
 spring.datasource.username=root
@@ -12,3 +12,5 @@ spring.dubbo.registry.address=zk.gmall.com:2181
 spring.dubbo.base-package=com.atguigu.gmall
 spring.dubbo.protocol.name=dubbo
 
+mybatis.mapper-locations=classpath:mapper/*Mapper.xml
+mybatis.configuration.mapUnderscoreToCamelCase=true
